--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "**Opening a file open():**\n",
-    "----------------------\n",
+    "\n",
     "When the open() function is used to open a file, it returns a pointer to the beginning of the file. This is called 'file handler' or 'file object'.\n",
     "\n",
     "- Here 'f' represents the file handler or file object. It refers to the file with the name 'myfile.txt' that is opendedin 'w' mode. This means, we can write data into the file but we can not read data from this file. If this file exists already,then its contents are deleted and the present data is stored into the file."
@@ -59,10 +59,17 @@
    "metadata": {},
    "source": [
     "**Closing a file close():**\n",
-    "-----------------------\n",
+    "\n",
     "A file which is opened should be closed using the close() method. Once a file is opened but not closed, then the data of the file may be corrupted or deleted in some cases. Also, if the file is not closed, the memory utilized by the file is not freed, leading to problems like insufficient memory. This happens when we are working with serval files simultaneously. Hence it is mandatory to close the file.\n",
     "\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Creating File**"
    ]
   },
   {
@@ -76,6 +83,13 @@
     "        file.write(content)\n",
     "\n",
     "create_file(\"test.txt\", \"This is text file\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Open Modes**"
    ]
   },
   {
@@ -148,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Writing list of string**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -181,109 +202,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reading the File**"
+    "### **Reading the File**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_file(file_path, content):\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        file.write(content)\n",
+    "\n",
+    "create_file(\"myfile.txt\", \"Current content of the file: \\nI am a learner \\nPython is easy to learn \\nUpdated content of the file: \\nThis is the new content. \\neasy to learn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi Good Morning\n",
-      "Good Night\n"
+      "Current content of the file: \n",
+      "I am a learner \n",
+      "Python is easy to learn \n",
+      "Updated content of the file: \n",
+      "This is the new content. \n",
+      "easy to learn\n"
      ]
     }
    ],
    "source": [
-    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt\", 'r') as file:\n",
+    "with open(\"myfile.txt\", 'r') as file:\n",
     "    print(file.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi Good Morning\n",
-      "Good Night\n"
+      "Current content of the file: \n",
+      "I am a learner \n",
+      "Python is easy to learn \n",
+      "Updated content of the file: \n",
+      "This is the new content. \n",
+      "easy to learn\n"
      ]
     }
    ],
    "source": [
-    "file = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "file = open('myfile.txt','r')\n",
     "res=file.read()\n",
     "print(res)\n",
     "file.close()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Writing The File**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
-    "str='Hi Good Morning'\n",
-    "f.write(str)\n",
-    "\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Hi Good Morning'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current co\n"
+     ]
     }
    ],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
-    "f.read()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Appending Text into File**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt', 'a')\n",
-    "\n",
-    "str_to_write = '\\nGood Night'\n",
-    "f.write(str_to_write)\n",
-    "\n",
-    "f.close()"
+    "file = open(\"myfile.txt\", \"r\")\n",
+    "content = file.read(10)  # Reads the first 10 characters\n",
+    "print(content)\n",
+    "file.close()"
    ]
   },
   {
@@ -302,35 +302,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hi Good Morning\\n', 'Good Night']\n"
+      "['Current content of the file: \\n', 'I am a learner \\n', 'Python is easy to learn \\n', 'Updated content of the file: \\n', 'This is the new content. \\n', 'easy to learn']\n"
      ]
     }
    ],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "f=open('myfile.txt','r')\n",
     "str=f.readlines()\n",
     "print(str)\n",
     "f.close()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current content of the file:\n",
+      "I am a learner\n",
+      "Python is easy to learn\n",
+      "Updated content of the file:\n",
+      "This is the new content.\n",
+      "easy to learn\n"
+     ]
+    }
+   ],
    "source": [
-    "**Spliting Line**"
+    "file = open(\"myfile.txt\", \"r\")\n",
+    "lines = file.readlines()\n",
+    "for line in lines:\n",
+    "    print(line.strip())  # strip() removes the newline character\n",
+    "file.close()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Spliting Line**\n",
     "- This method displays all the strings as elements in a list. The \"\\n\" character is visible at the end of each string.\n",
     "\t\n",
     "- If we want to suppress the \"\\n\" characters, then we can use read() method with splitlines() method as:"
@@ -338,14 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hi Good Morning', 'Good Night']\n"
+      "['Current content of the file: ', 'I am a learner ', 'Python is easy to learn ', 'Updated content of the file: ', 'This is the new content. ', 'easy to learn']\n"
      ]
     }
    ],
@@ -358,15 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hi', 'Good', 'Morning']\n",
-      "['Good', 'Night']\n"
+      "['Current', 'content', 'of', 'the', 'file:']\n",
+      "['I', 'am', 'a', 'learner']\n",
+      "['Python', 'is', 'easy', 'to', 'learn']\n",
+      "['Updated', 'content', 'of', 'the', 'file:']\n",
+      "['This', 'is', 'the', 'new', 'content.']\n",
+      "['easy', 'to', 'learn']\n"
      ]
     }
    ],
@@ -383,6 +407,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Writing The File**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
+    "str='Current content of the file: I am a learner, Python is easy to learn'\n",
+    "f.write(str)\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Current content of the file: I am a learner, Python is easy to learn'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Using writelines() Function**\n",
     "\n",
     "Write a python program to write multiple lines of text into a file:"
@@ -390,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['example.Welcome to TutorialsPoint', 'Write multiple lines ', 'Done successfully', 'Thank You!']\n"
+      "['Welcome to TutorialsPoint', 'Write multiple lines ', 'Done successfully', 'Thank You!']\n"
      ]
     }
    ],
@@ -424,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +522,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Append and Read**\n",
+    "### **Appending Text into File**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt', 'a')\n",
+    "\n",
+    "str_to_write = '\\nGood Night'\n",
+    "f.write(str_to_write)\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Append and Read**\n",
     "\n",
     "Appending data to the file and then to display the data.For this purpose, we should open the file in 'append and read' mode as:\n",
     "\n",
@@ -469,21 +555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "llo How Are You\n",
-      "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt\n",
-      "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt1\n",
-      "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt\n",
-      "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt2\n",
-      "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt3\n",
-      "\n",
-      "Good NightGood Nightlkjhgf\n",
+      "sameer\n",
+      "Sameer.\n",
       "\n"
      ]
     }
@@ -494,7 +574,7 @@
     "\n",
     "f.write(str+\"\\n\")\n",
     "\n",
-    "f.seek(2)\n",
+    "f.seek(0)\n",
     "\n",
     "str=f.read()\n",
     "print(str)\n",
@@ -506,80 +586,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Python program to copy the contents of one file to another file:**"
+    "### **Python program to copy the contents of one file to another file:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_4028\\3497365908.py:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "  with open('D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt') as f:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "with open('D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt') as f:\n",
-    "\twith open('out.txt', 'w') as f1:\n",
+    "\twith open('output.txt', 'w') as f1:\n",
     "\t\tfor line in f:\n",
     "\t\t\tf1.write(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current content of the file:\n",
-      "I am a learner\n",
-      "Python is easy to learn\n",
-      "\n",
-      "Updated content of the file:\n",
-      "This is the new content.\n",
-      "easy to learn\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Open the file in r+ mode\n",
-    "with open(r'sample.txt', 'r+') as file:\n",
-    "    # Read the current content of the file\n",
-    "    content = file.read()\n",
-    "    print(\"Current content of the file:\")\n",
-    "    print(content)\n",
-    "\n",
-    "    # Move the file pointer to the beginning of the file\n",
-    "    file.seek(0)\n",
-    "\n",
-    "    # Write new content to the file\n",
-    "    file.write(\"This is the new content.\\n\")\n",
-    "\n",
-    "    # Move the file pointer to the beginning again\n",
-    "    file.seek(0)\n",
-    "\n",
-    "    # Read the updated content of the file\n",
-    "    updated_content = file.read()\n",
-    "    print(\"Updated content of the file:\")\n",
-    "    print(updated_content)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**File Handling With Exception**"
+    "### **Deleting a File**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.remove(\"output.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "if os.path.exists(\"output.txt\"):\n",
+    "    print(\"file\")\n",
+    "else:\n",
+    "  print(\"The file does not exist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "if os.path.exists(\"output.txt\"):\n",
+    "  os.remove(\"output.txt\")\n",
+    "else:\n",
+    "  print(\"The file does not exist\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Working with CSV Files**\n",
+    "Reading from a CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'City']\n",
+      "['Alice', '30', 'New York']\n",
+      "['Bob', '35', 'London']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"data.csv\", \"r\") as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Writing to a CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data.csv\", \"w\", newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"Name\", \"Age\", \"City\"])\n",
+    "    writer.writerow([\"Alice\", \"30\", \"New York\"])\n",
+    "    writer.writerow([\"Bob\", \"35\", \"London\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading a CSV file as a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice 30 New York\n",
+      "Bob 35 London\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.csv\", \"r\") as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    for row in reader:\n",
+    "        print(row[\"Name\"], row[\"Age\"], row[\"City\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Working with JSON Files**\n",
+    "Reading from a JSON file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"data.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    {\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"},\n",
+    "    {\"name\": \"Bob\", \"age\": 25, \"city\": \"Los Angeles\"},\n",
+    "    {\"name\": \"Charlie\", \"age\": 35, \"city\": \"Chicago\"},\n",
+    "    {\"name\": \"David\", \"age\": 28, \"city\": \"San Francisco\"}\n",
+    "]\n",
+    "\n",
+    "with open(\"data.json\", \"w\") as file:\n",
+    "    json.dump(data, file, indent=4)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **File Handling With Exception**"
    ]
   },
   {
