--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is a test file.\n",
-      "This is another line.\n",
-      "This is a test file.\n",
-      "This is a new line\n"
+      "This is text file\n"
      ]
     }
    ],
@@ -116,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +162,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Writing list of string**"
+    "### **Creating File of list of string**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +191,7 @@
     "        for line in content:\n",
     "            file.write(line + '\\n')\n",
     "\n",
-    "file_path = 'mixed_strings.txt'\n",
+    "file_path = 'myfile.txt'\n",
     "create_file(file_path, mixed_strings)"
    ]
   },
@@ -207,81 +204,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_file(file_path, content):\n",
-    "    with open(file_path, 'w') as file:\n",
-    "        file.write(content)\n",
-    "\n",
-    "create_file(\"myfile.txt\", \"Current content of the file: \\nI am a learner \\nPython is easy to learn \\nUpdated content of the file: \\nThis is the new content. \\neasy to learn\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current content of the file: \n",
-      "I am a learner \n",
-      "Python is easy to learn \n",
-      "Updated content of the file: \n",
-      "This is the new content. \n",
-      "easy to learn\n"
+      "test@example.com\n",
+      "123-456-7890\n",
+      "Start this string\n",
+      "This string ends with End\n",
+      "123456\n",
+      "Contains whitespace \n",
+      "pretest and posttest\n",
+      "@#!$%\n",
+      "5This does not start with a digit\n",
+      "NoWhitespaceHere\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "with open(\"myfile.txt\", 'r') as file:\n",
-    "    print(file.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current content of the file: \n",
-      "I am a learner \n",
-      "Python is easy to learn \n",
-      "Updated content of the file: \n",
-      "This is the new content. \n",
-      "easy to learn\n"
-     ]
-    }
-   ],
-   "source": [
-    "file = open('myfile.txt','r')\n",
-    "res=file.read()\n",
+    "file = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "res = file.read()\n",
     "print(res)\n",
     "file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current co\n"
+      "test@example.com\n",
+      "123-456-7890\n",
+      "Start this string\n",
+      "This string ends with End\n",
+      "123456\n",
+      "Contains whitespace \n",
+      "pretest and posttest\n",
+      "@#!$%\n",
+      "5This does not start with a digit\n",
+      "NoWhitespaceHere\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"myfile.txt\", 'r') as file:\n",
+    "    print(file.read())\n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test@example.com\n",
+      "123\n"
      ]
     }
    ],
    "source": [
     "file = open(\"myfile.txt\", \"r\")\n",
-    "content = file.read(10)  # Reads the first 10 characters\n",
+    "content = file.read(20)  # Reads the first 10 characters\n",
     "print(content)\n",
     "file.close()"
    ]
@@ -302,39 +298,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current content of the file: \\n', 'I am a learner \\n', 'Python is easy to learn \\n', 'Updated content of the file: \\n', 'This is the new content. \\n', 'easy to learn']\n"
+      "['test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n', '123456\\n', 'Contains whitespace \\n', 'pretest and posttest\\n', '@#!$%\\n', '5This does not start with a digit\\n', 'NoWhitespaceHere\\n']\n"
      ]
     }
    ],
    "source": [
-    "f=open('myfile.txt','r')\n",
-    "str=f.readlines()\n",
+    "f = open('myfile.txt','r')\n",
+    "str = f.readlines()\n",
     "print(str)\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current content of the file:\n",
-      "I am a learner\n",
-      "Python is easy to learn\n",
-      "Updated content of the file:\n",
-      "This is the new content.\n",
-      "easy to learn\n"
+      "test@example.com\n",
+      "123-456-7890\n",
+      "Start this string\n",
+      "This string ends with End\n",
+      "123456\n",
+      "Contains whitespace\n",
+      "pretest and posttest\n",
+      "@#!$%\n",
+      "5This does not start with a digit\n",
+      "NoWhitespaceHere\n"
      ]
     }
    ],
@@ -358,19 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current content of the file: ', 'I am a learner ', 'Python is easy to learn ', 'Updated content of the file: ', 'This is the new content. ', 'easy to learn']\n"
+      "['test@example.com', '123-456-7890', 'Start this string', 'This string ends with End', '123456', 'Contains whitespace ', 'pretest and posttest', '@#!$%', '5This does not start with a digit', 'NoWhitespaceHere']\n"
      ]
     }
    ],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "f=open('myfile.txt','r')\n",
     "str=f.read().splitlines()\n",
     "print(str)\n",
     "f.close()"
@@ -378,29 +378,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current', 'content', 'of', 'the', 'file:']\n",
-      "['I', 'am', 'a', 'learner']\n",
-      "['Python', 'is', 'easy', 'to', 'learn']\n",
-      "['Updated', 'content', 'of', 'the', 'file:']\n",
-      "['This', 'is', 'the', 'new', 'content.']\n",
-      "['easy', 'to', 'learn']\n"
+      "['test@example.com']\n",
+      "['123-456-7890']\n",
+      "['Start', 'this', 'string']\n",
+      "['This', 'string', 'ends', 'with', 'End']\n",
+      "['123456']\n",
+      "['Contains', 'whitespace']\n",
+      "['pretest', 'and', 'posttest']\n",
+      "['@#!$%']\n",
+      "['5This', 'does', 'not', 'start', 'with', 'a', 'digit']\n",
+      "['NoWhitespaceHere']\n"
      ]
     }
    ],
    "source": [
     "# Python code to illustrate split() function\n",
-    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt\", \"r\") as file:\n",
+    "with open(\"myfile.txt\", \"r\") as file:\n",
     "\tdata = file.readlines()\n",
     "\tfor line in data:\n",
     "\t\tword = line.split()\n",
-    "\t\tprint (word)\n"
+    "\t\tprint(word)\n"
    ]
   },
   {
@@ -412,12 +416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
-    "str='Current content of the file: I am a learner, Python is easy to learn'\n",
+    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
+    "str = 'Current content of the file: I am a learner, Python is easy to learn'\n",
     "f.write(str)\n",
     "\n",
     "f.close()"
@@ -425,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -434,13 +438,13 @@
        "'Current content of the file: I am a learner, Python is easy to learn'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
     "f.read()"
    ]
   },
@@ -455,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\file.txt', 'a') as file:\n",
+    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt', 'w') as file:\n",
     "   l1 = \"Welcome to TutorialsPoint\\n\"\n",
     "   l2 = \"Write multiple lines \\n\"\n",
     "   l3 = \"Done successfully\\n\"\n",
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -482,18 +486,19 @@
     }
    ],
    "source": [
-    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\file.txt') as f:\n",
+    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt') as f:\n",
     "    data = f.read().strip().split('\\n')\n",
-    "    print(data)"
+    "    print(data)\n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fvar = open(r'D:\\Python\\Python Basics\\9.File_Handling\\file.txt','w')\n",
+    "fvar = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
     "list1=[\"Hello \",\"Hi \",\"How ru\"]\n",
     "fvar.writelines(list1)\n",
     "fvar.close()"
@@ -501,20 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hello Hi How ru']\n"
+      "Hello Hi How ru\n"
      ]
     }
    ],
    "source": [
-    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\file.txt') as f:\n",
-    "    data = f.read().strip().split('\\n')\n",
+    "with open('myfile.txt','r') as f:\n",
+    "    data = f.read()\n",
     "    print(data)"
    ]
   },
@@ -527,16 +532,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt', 'a')\n",
+    "f = open('myfile.txt', 'a')\n",
     "\n",
     "str_to_write = '\\nGood Night'\n",
     "f.write(str_to_write)\n",
     "\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello Hi How ru', 'Good Night']"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('myfile.txt', 'r')\n",
+    "f.read().split('\\n')"
    ]
   },
   {
@@ -555,28 +581,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sameer\n",
-      "Sameer.\n",
-      "\n"
+      "o Hi How ru\n",
+      "Good NightPython\n",
+      "Python\n",
+      "Python\n"
      ]
     }
    ],
    "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','a+')\n",
-    "str=input(\"Enter Text\")\n",
+    "f =open('myfile.txt','a+')\n",
+    "\n",
+    "str = input(\"Enter Text\")\n",
     "\n",
     "f.write(str+\"\\n\")\n",
     "\n",
-    "f.seek(0)\n",
+    "f.seek(4)\n",
     "\n",
-    "str=f.read()\n",
+    "str = f.read().strip()\n",
     "print(str)\n",
     "\n",
     "f.close()"
@@ -591,14 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "with open('D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt') as f:\n",
+    "with open('myfile.txt' ,'r') as f:\n",
     "\twith open('output.txt', 'w') as f1:\n",
     "\t\tfor line in f:\n",
     "\t\t\tf1.write(line)"
@@ -613,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +663,6 @@
     }
    ],
    "source": [
-    "import os\n",
     "if os.path.exists(\"output.txt\"):\n",
     "    print(\"file\")\n",
     "else:\n",
@@ -644,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +683,6 @@
     }
    ],
    "source": [
-    "import os\n",
     "if os.path.exists(\"output.txt\"):\n",
     "  os.remove(\"output.txt\")\n",
     "else:\n",
@@ -667,13 +693,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Working with CSV Files**\n",
-    "Reading from a CSV file"
+    "### **Working with CSV Files**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading a CSV file as a dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'data.csv' created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_file(file_path, content):\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        file.write(content)\n",
+    "    print(f\"File '{file_path}' created successfully.\")\n",
+    "\n",
+    "create_file('data.csv' , 'Name,Age,city\\nJohn,25,New York\\nJane,30,Blore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +736,9 @@
      "text": [
       "['Name', 'Age', 'City']\n",
       "['Alice', '30', 'New York']\n",
-      "['Bob', '35', 'London']\n"
+      "['Bob', '35', 'London']\n",
+      "['Bob', '35', 'London']\n",
+      "['Abc', '34', 'Baglore']\n"
      ]
     }
    ],
@@ -704,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,15 +772,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Reading a CSV file as a dictionary"
+    "with open(\"data.csv\", \"a\", newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"Xyz\", \"36\", \"Baglore\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +792,9 @@
      "output_type": "stream",
      "text": [
       "Alice 30 New York\n",
-      "Bob 35 London\n"
+      "Bob 35 London\n",
+      "Bob 35 London\n",
+      "Abc 34 Baglore\n"
      ]
     }
    ],
@@ -753,14 +815,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}]\n"
+      "File 'data.json' created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_file(file_path, content):\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        file.write(content)\n",
+    "    print(f\"File '{file_path}' created successfully.\")\n",
+    "\n",
+    "create_file('data.json', '{\"name\":\"John\", \"age\":30, \"city\":\"New York\"}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John', 'age': 30, 'city': 'New York'}\n"
      ]
     }
    ],
@@ -774,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,6 +875,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_entry = {\"name\": \"Python\", \"age\": 31, \"city\": \"Bangalore\"}\n",
+    "data.append(new_entry)\n",
+    "\n",
+    "with open(\"data.json\", \"w\") as file:\n",
+    "    json.dump(data, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "    print(data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -799,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +923,8 @@
      "output_type": "stream",
      "text": [
       "File content:\n",
-      "Hello How Are You\n"
+      "Hello Hi How ru\n",
+      "Good NightPython\n"
      ]
     }
    ],
